--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "libphonenumber-js": "^1.9.50",
     "express-rate-limit": "^5.2.6",
+    "libphonenumber-js": "^1.9.50",
     "react": "^18.0.0",
     "react-confetti": "^6.0.1",
     "react-dom": "^18.0.0",
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.29.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-use": "^17.3.2",
     "sweetalert2": "^11.4.8",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
